Sealing & making things into records.
- Sealed Property and converted instanceof checks to switches.
- Sealed MarshalledProvenance and converted instanceof checks to
  switches.
- Sealed Provenance and PrimitiveProvenance, converted instanceof checks
  to switches.
- Also removed StreamUtil.boundParallelism as it only applies to Java 8
  or 9, neither of which are supported in this version.
- Made a bunch of things final.
- Other small cleanups.