@@ -126,7 +126,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
     protected SkeletalConfiguredObjectProvenance(ExtractedInfo info) {
         this.className = info.className;
         this.hostShortName = info.hostShortName;
-        this.configuredParameters = Collections.unmodifiableMap(new HashMap<>(info.configuredParameters));
+        this.configuredParameters = Map.copyOf(info.configuredParameters);
     }
 
     /**
@@ -136,7 +136,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
      * to the {@link SkeletalConfiguredObjectProvenance#SkeletalConfiguredObjectProvenance(ExtractedInfo)}
      * constructor to prevent that constructor from triggering class loading of the
      * host class.
-     *
+     * <p>
      * The class loading would be required to separate out the configured parameters from the instance
      * values, however subclasses of {@link SkeletalConfiguredObjectProvenance} must supply it
      * themselves via an extraction method.
@@ -158,7 +158,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
     /**
      * Extracts the specified Provenance from the supplied info's instance values and returns it. Checks that it's the right type,
      * and casts to it before returning.
-     *
+     * <p>
      * Throws ProvenanceException if it's not found or it's an incorrect type.
      * @param info The ExtractedInfo to check.
      * @param key The key to look up.
@@ -249,7 +249,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
                                 if (genericClasses.size() != 1) {
                                     logger.log(Level.SEVERE, "Invalid configurable field definition, field not recorded - found too many or too few generic type parameters for field " + f.getName());
                                 } else {
-                                    map.put(f.getName(), convertCollection(f, (Collection) f.get(host), genericClasses.get(0)));
+                                    map.put(f.getName(), convertCollection(f, (Collection<?>) f.get(host), genericClasses.getFirst()));
                                 }
                                 break;
                             }
@@ -258,7 +258,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
                                 if (genericClasses.size() != 2) {
                                     logger.log(Level.SEVERE, "Invalid configurable field definition, field not recorded - found too many or too few generic type parameters for field " + f.getName());
                                 } else {
-                                    map.put(f.getName(), convertMap(f, (Map) f.get(host), genericClasses.get(1)));
+                                    map.put(f.getName(), convertMap(f, (Map<?,?>) f.get(host), genericClasses.get(1)));
                                 }
                                 break;
                             }
@@ -291,7 +291,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
             return new ListProvenance<>();
         }
         String fieldName = f.getName();
-        ArrayList<PrimitiveProvenance> list = new ArrayList<>();
+        ArrayList<PrimitiveProvenance<?>> list = new ArrayList<>();
         switch (ft) {
             case BYTE_ARRAY: {
                 byte[] array = (byte[]) object;
@@ -404,7 +404,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
      * @param genericType The generic type bound of the collection.
      * @return A ListProvenance.
      */
-    private static ListProvenance<?> convertCollection(Field f, Collection collection, Class<?> genericType) {
+    private static ListProvenance<?> convertCollection(Field f, Collection<?> collection, Class<?> genericType) {
         if (collection == null) {
             return new ListProvenance<>();
         } else {
@@ -523,13 +523,13 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
                 if (o == null) {
                     return Optional.empty();
                 } else {
-                    return Optional.of(new EnumProvenance<>(fieldName, (Enum) o));
+                    return Optional.of(new EnumProvenance<>(fieldName, (Enum<?>) o));
                 }
             case CONFIGURABLE:
                 if (o == null) {
                     return Optional.of(ConfiguredObjectProvenance.getEmptyProvenance(fieldClass.getName()));
-                } else if (o instanceof Provenancable) {
-                    return Optional.of(((Provenancable) o).getProvenance());
+                } else if (o instanceof Provenancable<?> prov) {
+                    return Optional.of(prov.getProvenance());
                 } else {
                     logger.log(Level.WARNING, "Automatic provenance generated for Configurable class, consider opting into provenance by implementing Provenancable on " + o.getClass().toString());
                     return Optional.of(new ConfiguredObjectProvenanceImpl((Configurable)o, fieldName));
@@ -567,7 +567,7 @@ public abstract class SkeletalConfiguredObjectProvenance implements ConfiguredOb
 
     /**
      * Returns the instance parameters for this provenance.
-     *
+     * <p>
      * Subclasses must call this first, before adding additional instance
      * parameters to the returned map.
      * @return A map of provenances.
